[package]
name = "mmrmangofarm"
version = "0.1.0"
authors = ["SpicyRicecaker <awesomenessisgolden@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.2"
tokio = { version = "1.16.1", features = ["full"] }
futures = "0.3.13"
regex = "1.4.5"
serde = { version = "1.0.125", features = ["derive"] }
serde_json = "1.0.64"